.labs/Local-Kubernetes/mlops/manifests/jupyter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter
spec:
  type: ClusterIP
  selector:
    app: jupyter
  ports:
    - name: http
      port: 8888
      targetPort: 8888
